tests/snapshots/yaml_suite_snapshots__yaml_suite_GH63_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Mixed Block Mapping (explicit to implicit)
  from: NimYAML tests
  tags: explicit-key mapping
  yaml: "? a\n: 1.3\nfifteen: d\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a\n   =VAL :1.3\n   =VAL :fifteen\n   =VAL :d\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"a\": 1.3,\n  \"fifteen\": \"d\"\n}\n"
  dump: "a: 1.3\nfifteen: d\n"
