tests/snapshots/yaml_suite_snapshots__yaml_suite_GH63_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "a: 1.3\nfifteen: d\n"
  from: NimYAML tests
  json: "{\n  \"a\": 1.3,\n  \"fifteen\": \"d\"\n}\n"
  name: Mixed Block Mapping (explicit to implicit)
  tags: explicit-key mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a\n   =VAL :1.3\n   =VAL :fifteen\n   =VAL :d\n  -MAP\n -DOC\n-STR\n"
  yaml: "? a\n: 1.3\nfifteen: d\n"
