tests/snapshots/yaml_suite_snapshots__yaml_suite_GT5M_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Node anchor in sequence
  from: "@perlpunk"
  tags: anchor error sequence
  fail: true
  yaml: "- item1\n&node\n- item2\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :item1\n"
