tests/snapshots/yaml_suite_snapshots__yaml_suite_GT5M_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Node anchor in sequence
  tags: anchor error sequence
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :item1\n"
  yaml: "- item1\n&node\n- item2\n"
