tests/snapshots/yaml_suite_snapshots__yaml_suite_H2RW_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Blank lines
  from: IRC discussion with leont
  tags: comment literal scalar whitespace
  yaml: "foo: 1\n\nbar: 2\n␣␣␣␣\ntext: |\n  a\n␣␣␣␣\n  b\n\n  c\n␣\n  d\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL :1\n   =VAL :bar\n   =VAL :2\n   =VAL :text\n   =VAL |a\\n  \\nb\\n\\nc\\n\\nd\\n\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo\": 1,\n  \"bar\": 2,\n  \"text\": \"a\\n  \\nb\\n\\nc\\n\\nd\\n\"\n}\n"
  dump: "foo: 1\nbar: 2\ntext: \"a\\n  \\nb\\n\\nc\\n\\nd\\n\"\n"
  emit: "foo: 1\nbar: 2\ntext: |\n  a\n␣␣␣␣\n  b\n\n  c\n\n  d\n"
