tests/snapshots/yaml_suite_snapshots__yaml_suite_H3Z8_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\nwanted: \"love \\u2665 and peace \\u262E\"\n"
  from: "@perlpunk"
  json: "{\n  \"wanted\": \"love ♥ and peace ☮\"\n}\n"
  name: Literal unicode
  tags: scalar
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :wanted\n   =VAL :love ♥ and peace ☮\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\nwanted: love ♥ and peace ☮\n"
